# manifest

./: Cargo.toml  Certora_README.md  SECURITY_FIX.md  SECURITY_REPORT.md  local-validator-test.sh  package.json
.github/workflows/: ci-balance-checker.yml  ci-benchmark.yml  ci-certora.yml  ci-code-review-rust.yml  ci-code-review-ts.yml  ci-trade-verification.yml
audits/: updates.md
certora/: cvt_inlining.txt
cli/src/: main.rs
client/idl/: manifest.json
client/rust/: Cargo.toml
client/ts/: README.md
debug-ui/: package.json
debug-ui/lib/: address-labels.ts  data.ts  killswitch.ts  util.ts
debug-ui/scripts/: balance-checker.ts  check-extensions.ts  start-fill-feed.ts  stats-server.ts  update-alts.ts  verify-trades.ts  view-market.ts
dev/bench/: data.js
devnet-setup/: Cargo.toml
devnet-setup/src/: main.rs
docs/: WALLET_INTEGRATION.md
examples/levels/: package.json
lib/: Cargo.toml
lib/asm/: Makefile  README.md
lib/asm/src/: insert_fix.s  remove_fix.s  rotate_left.s  rotate_right.s
lib/src/: lib.rs  llrb.rs  llrb_opt.rs  red_black_tree.rs  red_black_tree_opt.rs  utils.rs  utils_opt.rs
lib/src/asm/: mod.rs
programs/manifest/: Cargo.toml
programs/ui-wrapper/: Cargo.toml
programs/wrapper/: Cargo.toml
scripts/: backfill-tickers.ts  balance-checker.ts  cancel-reverse.ts  check-extensions.ts  collect-wrapper-fees.ts  liquidity-monitoring.ts  orderbook-snapshots.ts  run-rando-bot.ts  stats-server.ts  tsconfig.json  update-alts.ts  verify-trades.ts  view-market.ts
scripts/stats_utils/: backfill.ts  constants.ts  manifestStatsServer.ts  (+9 more)
(+103 files in other folders)
