[package]
name = "hypertree"
version = "1.2.0"
edition = "2021"
repository = "https://github.com/Bonasa-Tech/manifest"
authors = ["Britt Cyr <britt@cks.systems>"]
description = "Data structures for Manifest"
license-file = "LICENSE"

[features]
colored = ["dep:colored"]
fuzz = []
trace = ["dep:solana-program"]
test = []

# Certora feature exposes many of the internal implementation details, so should
# only be used in formal verification. Ironically, the security testing makes
# the code less secure.
certora = ["dep:nondet", "dep:calltrace", "dep:cvt"]

# Optimization features for improved compute unit performance
# opt-unsafe: Uses unsafe Rust optimizations (removes bounds checks, etc.)
# opt-asm: Uses sBPF assembly (requires separate build with sbpf SDK)
# opt-full: Enables both unsafe Rust and sBPF assembly optimizations
# certora-opt: Certora verification with unsafe optimizations enabled
opt-unsafe = []
opt-asm = []
opt-full = ["opt-unsafe", "opt-asm"]
certora-opt = ["certora", "opt-unsafe"]

[dependencies]
bytemuck = { workspace = true, features = ["derive"] }
solana-program = { workspace = true, optional = true }
static_assertions = { workspace = true }
nondet = { workspace = true, optional = true}
calltrace = { workspace = true, optional = true}
cvt = { workspace = true, optional = true}

# Does not work with sbf. Enable when debugging red black only
colored = { version = "2.1.0", optional = true }